# rust-airflow

./: Cargo.toml  README.md  build.rs
docs/: DOCUMENTATION_GUIDE.md  README.md
docs/examples/: sample_flow.yaml
icons/: README.md
par/: 1102_a.par  1102_b.par
scenarios/: sample_complex_advanced.yaml  sample_complex_shells.yaml  sample_db_targets.yaml  sample_finance_job.yaml  sample_loop_extract.yaml  sample_user_confirm.yaml  scenario_01_basic_shell.yaml  scenario_02_user_confirm_shell.yaml  scenario_03_basic_db_query.yaml  scenario_04_loop_extract.yaml  scenario_05_multi_db_load.yaml  scenario_06_finance_loader.yaml  scenario_07_complex_end_to_end.yaml  scenario_08_shell_sql_workflow.yaml  scenario_09_windows_shell_chain.yaml
sql/: 01_extract_year.sql
src/: app.rs  engine.rs  executor.rs  main.rs  scenario.rs  theme.rs
src/app/: mod.rs  state.rs  ui.rs  widgets.rs
src/app/ui/: layout.rs  mod.rs  modal.rs  panels.rs  status.rs  toolbar.rs
src/editor/: convert.rs  mod.rs  model.rs  view.rs
src/editor/model/: connection.rs  db.rs  error.rs  loop_config.rs  mod.rs  state.rs  step.rs
src/editor/view/: canvas.rs  layout.rs  mod.rs  palette.rs  properties.rs
src/editor/view/properties/: confirm.rs  db.rs  loop_panel.rs  mod.rs  step_config.rs
src/engine/: confirm_bridge.rs  context.rs  events.rs  mod.rs  resources.rs  runner.rs  state.rs  steps.rs
src/engine/steps/: confirm.rs  extract.rs  loops.rs  mod.rs  shell.rs  sql.rs  sqlldr.rs  utils.rs
src/executor/: oracle_db_executor.rs  real_db_executor.rs
