[package]
name = "Rust-Airflow"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
eframe = { version = "0.26", default-features = false, features = ["wgpu", "default_fonts"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "time", "process", "fs", "sync", "io-util"] }
thiserror = "1"
futures = "0.3"
rfd = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-util = { version = "0.7", features = ["rt", "codec"] }
deadpool-postgres = { version = "0.12", features = ["serde"] }
tokio-postgres = "0.7"
ico = "0.3"

[build-dependencies]
winres = { version = "0.1", optional = true }
walkdir = "2"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
default = []
